--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "lib/react-avatar.js",
   "types": "src/avatar.d.ts",
   "scripts": {
+    "prepare": "npm run build",
     "start": "webpack-dev-server --open --config webpack.dev.js",
     "build": "webpack --config webpack.prod.js --optimize-minimize",
     "build:example": "webpack --config webpack.example.js --optimize-minimize"
